dpkg (1.16.2) UNRELEASED; urgency=low

  [ Guillem Jover ]
  * Move <config.h> and <compat.h> to the top of trigdeferred.l to properly
    use the configured features and compat code.
  * Honour --disable-nls when the system lacks obstack support, by updating
    the obstack compat module from gnulib.

  [ Updated man page translations ]
  * German (Helge Kreutzmann).

 -- Helge Kreutzmann <debian@helgefjell.de>  Fri, 23 Sep 2011 17:29:38 +0200

dpkg (1.16.1) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Dpkg::Deps: Implement new "reset" method and bump module version to 1.01
    due to this.
  * Improved description of --search in dpkg-query(1). Closes: #621066
    Thanks to Lars Buitinck <larsmans@gmail.com> for the patch.
  * Let update-alternatives fsync() its administrative files before
    moving them in place to avoid empty files with some filesystems.
    LP: #344019
  * Tighten the regexp used by dpkg-source to ignore the .pc directory of
    quilt. Thanks to Mike Hommey for noticing the problem.
  * Change behaviour of dpkg-source's --extend-diff-ignore to also
    extend the current diff-ignore if it has already been set.
  * Fix dependency checking code to consider a dependency on a virtual
    package provided by a package in triggers-pending status as satisfied.
  * Do not fail when encountering a pre-dependency in triggers-awaited state,
    instead process the awaited triggers. Closes: #526774
  * "any" no longer hides "all" in the Architecture field of a .dsc.
  * Fix dpkg --remove to really remove the triggers from the various
    internal files in /var/lib/dpkg/info/triggers/. Closes: #525160
  * Avoid a perl warning in dpkg-gensymbols when no symbols file has been
    generated (because it would have been empty). Closes: #626684
  * Re-enable the Package-List field but drop the Architecture column since we
    have no clear use case yet. It can always be added later on.
    Also drop the source line since it duplicates other fields.