@@ -5,7 +5,10 @@ AM_CPPFLAGS = \
 	-idirafter $(top_srcdir)/lib/compat \
 	-I$(top_builddir) \
 	-I$(top_srcdir)/lib
-LDADD = ../libdpkg.a
+LDADD = \
+	$(top_builddir)/lib/dpkg/libdpkg.a \
+	$(top_builddir)/lib/compat/libcompat.a \
+	$(LIBINTL)
 
 
 # The tests are sorted in order of increasing complexity.
