@@ -5,6 +5,8 @@ dpkg (1.16.2) UNRELEASED; urgency=low
     use the configured features and compat code.
   * Honour --disable-nls when the system lacks obstack support, by updating
     the obstack compat module from gnulib.
+  * Link the libdpkg unit tests with libcompat and libintl, so that systems
+    needing them will compile correctly.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
